syntax = "proto3";


option java_multiple_files = true;

service SlaughterhouseService {
  rpc GetAnimalsForProduct (ProductRequest) returns (AnimalResponse);
  rpc GetProductsForAnimal (AnimalRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_id = 1; // ID of the product
}

message AnimalRequest {
  string animal_id = 1; // ID of the animal
}

message AnimalResponse {
  repeated string animal_ids = 1; // List of animal IDs
}

message ProductResponse {
  repeated string product_ids = 1; // List of product IDs
}
